--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="wrapper">
-      <div id="loader">LOADING...</div>
-      <div id="img-container"></div>
+    <div id="main">
+      <h1 id="heading">Infinite Scroll</h1>
+      <div id="wrapper">
+        
+        <div id="loader">LOADING...</div>
+        <div id="img-container"></div>
+      </div>
     </div>
 
     <script src="script.js"></script>
